# Estrutura-De-Dados

./: CMakeLists.txt  lista1ex1.c  main.c  tab.c  teste.c
lab1/: q1.c  q2.c  q3.c  q4.c  q5.c  q6.c  q7.c  q8.c
lab2/: lab2ex1.c  lab2ex2.c  lab2ex3.c
lista1/: lista1ex1.c  lista1ex2.c  lista1ex3.c  lista1ex4.c  lista1ex5.c  lista1ex6.c  lista1ex7.c  lista1ex8.c  lista1ex9.c
lista2/: lista2ex1.c  lista2ex2.c  lista2ex3.c  lista2ex4.c
lista4/: lista4ex1.c  lista4ex2.c  lista4ex4.c  lista4ex5.c
lista5/: ex2saida.txt  ex3.txt  lista5ex1.c  lista5ex2.c  lista5ex3.c
particionamentoarquivos/: dados.txt  sel_nat.c  selecaonatural  sn-2.txt  sn-3.txt
simuladex/: q10.c  q12.c  q4.c  q5.c  q6.c  q7.c  q8.c  q9.c
tab/: tab.c  tab.h
tabb/: tabb.c  teste_TABB.c
tg/: TG.c  TG.h
tlse/: teste_TLSE.c  tlse.c
tlseint/: TLSEINT.c  TLSEINT.h
