cmake_minimum_required(VERSION 4.0)
project(DataStructures C)

set(CMAKE_C_STANDARD 11)

add_executable(lista1ex1 lista1/lista1ex1.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex2 lista1/lista1ex2.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex3 lista1/lista1ex3.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex4 lista1/lista1ex4.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex5 lista1/lista1ex5.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex6 lista1/lista1ex6.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex7 lista1/lista1ex7.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex8 lista1/lista1ex8.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex9 lista1/lista1ex9.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista2ex1 lista2/lista2ex1.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex2 lista2/lista2ex2.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex3 lista2/lista2ex3.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex4 lista2/lista2ex4.c
        tabb/tabb.c
        tabb/tabb.h
)
