cmake_minimum_required(VERSION 4.0)
project(DataStructures C)

set(CMAKE_C_STANDARD 11)

add_executable(lista1ex1 lista1/lista1ex1.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex2 lista1/lista1ex2.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex3 lista1/lista1ex3.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex4 lista1/lista1ex4.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex5 lista1/lista1ex5.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex6 lista1/lista1ex6.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex7 lista1/lista1ex7.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex8 lista1/lista1ex8.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista1ex9 lista1/lista1ex9.c
        tab/tab.c
        tab/tab.h
)
add_executable(lista2ex1 lista2/lista2ex1.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex2 lista2/lista2ex2.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex3 lista2/lista2ex3.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lista2ex4 lista2/lista2ex4.c
        tabb/tabb.c
        tabb/tabb.h
)

add_executable(lista5ex1 lista5/lista5ex1.c)

add_executable(lista5ex2 lista5/lista5ex2.c)

add_executable(lista4ex1 lista4/lista4ex1.c
        tg/TG.c
        tg/TG.h
)
add_executable(lista4ex2 lista4/lista4ex2.c
        tg/TG.c
        tg/TG.h
)
add_executable(lista4ex4 lista4/lista4ex4.c
        tg/TG.c
        tg/TG.h
)
add_executable(lista4ex5 lista4/lista4ex5.c
        tg/TG.c
        tg/TG.h
)

add_executable(lab1ex1 lab1/q1.c
        tab/tab.c
        tab/tab.h
)
add_executable(lab1ex2 lab1/q2.c
        tab/tab.c
        tab/tab.h
)
add_executable(lab1ex3 lab1/q3.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lab1ex4 lab1/q4.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(lab1ex5 lab1/q5.c
        tab/tab.c
        tab/tab.h
)
add_executable(lab1ex6 lab1/q6.c
        tab/tab.c
        tab/tab.h
)
add_executable(lab1ex7 lab1/q7.c
        tlse/tlse.c
        tlse/tlse.h
        tg/TG.c
        tg/TG.h
)
add_executable(lab1ex8 lab1/q8.c
        tlse/tlse.c
        tlse/tlse.h
        tg/TG.c
        tg/TG.h
)
add_executable(lab2ex1 lab2/lab2ex1.c
        tab/tab.c
        tab/tab.h
        tlseint/TLSEINT.c
        tlseint/TLSEINT.h
)
add_executable(lab2ex2 lab2/lab2ex2.c
        tabb/tabb.c
        tabb/tabb.h
        tlseint/TLSEINT.c
        tlseint/TLSEINT.h
)
add_executable(lab2ex3 lab2/lab2ex3.c
        tab/tab.c
        tab/tab.h
        tlseint/TLSEINT.c
        tlseint/TLSEINT.h
)

add_executable(selecaonatural particionamentoarquivos/sel_nat.c)

add_executable(testetavl TAVL/teste_AVL.c
        TAVL/TAVL.c
        TAVL/TAVL.h
)
add_executable(simuladexq4 simuladex/q4.c
        tab/tab.c
        tab/tab.h
)
add_executable(simuladexq5 simuladex/q5.c
        tab/tab.c
        tab/tab.h
)
add_executable(simuladexq6 simuladex/q6.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(simuladexq7 simuladex/q7.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(simuladexq8 simuladex/q8.c
        tabb/tabb.c
        tabb/tabb.h
)
add_executable(simuladexq9 simuladex/q9.c
        tlse/tlse.c
        tlse/tlse.h
        tg/TG.c
        tg/TG.h
)
add_executable(simuladexq10 simuladex/q10.c
        tlse/tlse.c
        tlse/tlse.h
        tg/TG.c
        tg/TG.h
)
add_executable(simuladexq12 simuladex/q12.c
        tlse/tlse.c
        tlse/tlse.h
        tg/TG.c
        tg/TG.h
)